# execOS

./: .gitignore  README.md  systemsdesign.md
.claude/: settings.local.json
backend/: main.py  pyproject.toml  seed.py
backend/app/api/: analytics.py  checkins.py  outcomes.py  recommendations.py  tasks.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  checkin.py  outcome.py  recommendation.py  task.py
backend/app/schemas/: analytics.py  checkin.py  outcome.py  recommendation.py  task.py
backend/app/services/: classifier.py  interventions.py  ranking.py  recommendations.py
backend/app/tests/: test_classifier.py  test_ranking.py  test_recommendations.py
backend/dataset/: adhd_checkins_labeled.csv  generate.py  train.py  train_output.txt
